improved backups and better config

--- a/config
+++ b/config
@@ -1,3 +1,10 @@
+## defaults
+syshosts_file=/etc/hosts
+backupfilename=hosts
+newhostsfn=hosts-new
+downloader=curl
+replacehosts=0
+
 ## remove unneeded lines
 RM_COMMENTS=1
 RM_DUPLICATE_LINES=1
